# XRF-project

./: README.md  pyproject.toml
xrf_toolbox/: __init__.py  core.py  deconv.py  metrics.py  processing.py
xrf_toolbox/config/: S2 PICOFOX 200.json  __init__.py  equipo_desconocido.json  manager.py  s1_titan.json  s2_picofox_200.json
