[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xrf_toolbox"
version = "1.2.0"
description = "Herramientas para de-convolución y análisis de espectros XRF"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "xraylib",
    "xraydb",
    "functools",
]

[tool.setuptools.packages.find]

where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
xrf_toolbox = ["config/*.json"]




